--- a/lab3-gr-1-solution/sass/composants/_entete.scss
+++ b/lab3-gr-1-solution/sass/composants/_entete.scss
@@ -13,16 +13,20 @@
 
         display: flex;
         align-items: center;
+        justify-content: center;
 
         h1 {
             font-family: $font__header-h1;
-            font-size: clamp(1rem, 7vw, 8rem);
+            font-size: clamp(0.5rem, 3vw, 7rem);
             margin: 0;
+            padding-right: 15px;
+            
         }
 
         h2 {
             font-family: $font__header-h2;
-            font-size: clamp(1rem, .5vw, 5rem);
+            font-size: clamp(0.8rem, 2.5vw, 5.5rem);
+            padding-right: 60px;
         }
     }
 
@@ -32,12 +36,16 @@
         
     }
 }
+.site__barre{
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+}
 
 .icone {
     display: flex;
     justify-content: center;
     &__lien {
-        
         padding: 10px;
     }
 }
@@ -47,21 +55,29 @@
     display:flex;
     position: relative;
     align-items: center;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    
     
     &__input {
         padding:0;
         margin:0;
+        width: 100%;
+        background-color: $color__search-bar;
+        border: none;
+        color: $color__texte;
     }
 
     &__bouton {
         position: absolute;
+        right: 0;
         width: 29px;
         height: 20px;
         outline:none;
         border:none;
         padding:0;
         margin:0;
-        
-
+        background-color: $color__search-bar;
+        border: none;
     }
 }
