--- a/lab3-gr-1-solution/sass/layout/_layout.scss
+++ b/lab3-gr-1-solution/sass/layout/_layout.scss
@@ -1,5 +1,3 @@
-
-
 .site__header{
     grid-area: header;
     background-color: $color__background-header;
@@ -26,6 +24,9 @@
 }*/
 .site {
     background-color: $color__background-body ;
+    @media screen and (min-width:$largeur__media-tablette){
+        background-color: $color__background-body-grand-ecran ;
+    }
 	display: grid;
     gap: 10px;
 	grid-template-columns:auto;
