--- a/lab3-gr-1-solution/sass/composants/_navigation.scss
+++ b/lab3-gr-1-solution/sass/composants/_navigation.scss
@@ -10,18 +10,18 @@
 
 #chk-burger:checked ~ #burger{
     transform: rotate(90deg);
+    transition: 0.3s;
 }
 
 #chk-burger:checked ~ .menu-principal-container{
     display: block;
-
 }
 
 
 
 .menu-principal-container {
     display: none;
-    padding: 30px 0 0 0;
+    padding: 40px 0 0 0;
 
     .menu {
         list-style: none;
