--- a/lab3-gr-1-solution/sass/variables/_couleurs.scss
+++ b/lab3-gr-1-solution/sass/variables/_couleurs.scss
@@ -1,10 +1,15 @@
-$color__background-body: rgb(197, 125, 125);
-$color__background-header:#555;
-$color__background-barre:rgb(116, 37, 37);
-$color__background-footer:rgb(56, 34, 34);
-$color__background-main:rgb(168, 47, 47);
+$color__background-body: rgb(192, 0, 0);
+$color__background-body-grand-ecran: rgb(255, 255, 255);
+$color__background-header: rgb(192, 0, 0);
+$color__background-barre: rgb(197, 125, 125);
+$color__background-footer: rgb(0, 0, 0);
+$color__background-main: rgb(134, 134, 134);
 // liens
 $color__link: #4169e1; //royalblue
 $color__link-visited: #800080; //purple
 $color__link-hover: #191970; //midnightblue
-$background__link-hover : rgb(240, 240, 167)
+$background__link-hover : rgb(240, 240, 167);
+//couleur search bar
+$color__search-bar : rgba(255, 255, 255, 0.233);
+//couleur texte
+$color__texte: rgb(255, 255, 255);
