--- a/lab3-gr-1-solution/sass/variables/_couleurs.scss
+++ b/lab3-gr-1-solution/sass/variables/_couleurs.scss
@@ -3,7 +3,7 @@ $color__background-body-grand-ecran: rgb(255, 255, 255);
 $color__background-header: rgb(192, 0, 0);
 $color__background-barre: rgb(197, 125, 125);
 $color__background-footer: rgb(0, 0, 0);
-$color__background-main: rgb(134, 134, 134);
+$color__background-main: rgb(155, 155, 155);
 // liens
 $color__link: #4169e1; //royalblue
 $color__link-visited: #800080; //purple
@@ -13,3 +13,5 @@ $background__link-hover : rgb(240, 240, 167);
 $color__search-bar : rgba(255, 255, 255, 0.233);
 //couleur texte
 $color__texte: rgb(255, 255, 255);
+$color__texte_titre: rgb(7, 7, 7);
+$color__texte_paragraphe: rgb(47, 47, 47);
