--- a/lab3-gr-1-solution/sass/composants/_entete.scss
+++ b/lab3-gr-1-solution/sass/composants/_entete.scss
@@ -3,9 +3,14 @@
     display: flex;
     flex-direction: column;
     
-    @media screen and (min-width:$largeur__media-tablette) {
+    @media screen and (min-width : $largeur__media-tablette) {
         flex-direction: row;
         justify-content: space-between;
+        align-items: center;
+    }
+    @media screen and (min-width : $largeur__media-desktop) {
+        flex-direction: row;
+        justify-content: space-evenly;
         align-items: center;
     }
 
