--- a/lab3-gr-1-solution/sass/composants/_footer.scss
+++ b/lab3-gr-1-solution/sass/composants/_footer.scss
@@ -11,8 +11,6 @@
     display: flex;
     flex-direction: row;
     justify-content: space-around;
-    
-    
     width: 100%;
 
     &__adresse {
@@ -55,5 +53,6 @@
 .copyright__maisonneuve, p {
     font-size: clamp(0.8rem, 1.3vw, 6rem);
     display: flex;
+    color: $color__texte;
    
 }
