sem-4 c-2 hierarchie des modèles: front-page.php, single.php, category-cours.php

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -34,7 +34,10 @@ COMPOSANTES
 @import "composantes/header";
 @import "composantes/navigation";
 @import "composantes/footer";
-
+/* ---------------------------------------------------------
+ANIMATION
+--------------------------------------------------------- */
+@import "animation/entete";
 /* ---------------------------------------------------------
 LAYOUT
 --------------------------------------------------------- */
