--- a/sass/variables/_couleurs.scss
+++ b/sass/variables/_couleurs.scss
@@ -26,3 +26,6 @@ $color__font-header : rgb(250, 146, 146);
 $color__font-main :rgb(235, 202, 193);
 $color__font-barre : rgb(255, 255, 255);
 $color__font-footer : rgb(255, 202, 188);
+
+//404
+$color_background-404 : rgb(241, 92, 112);
