--- a/sass/animation/_entete.scss
+++ b/sass/animation/_entete.scss
@@ -12,8 +12,24 @@
         background-color: rgb(17, 97, 247);
         color : #fff;
         font-size: 3rem;
-        animation : anim-entete 1s forwards;
+       // animation : anim-entete 1s forwards;
+         &:nth-of-type(1){
+            animation: anim-entete 1s 0s forwards;
+        }
+        &:nth-of-type(2){
+            animation: anim-entete 1s .25s forwards;
+        }
+        &:nth-of-type(3){
+            animation: anim-entete 1s .5s forwards;
+        }
+        &:nth-of-type(4){
+            animation: anim-entete 1s .75s forwards;
+        }
+        &:nth-of-type(5){
+            animation: anim-entete 1s 1s forwards;
+        }
     }
+    
 }
 
 @keyframes anim-entete {
