--- a/sass/composantes/_navigation.scss
+++ b/sass/composantes/_navigation.scss
@@ -4,8 +4,13 @@
     transition : transform .3s;
     transform : rotate(0);
 }
+#chk-burger{
+
+    display: none;
+}
 
 #chk-burger:checked ~ #burger {
+    
     transform : rotate(90deg);
 }
 .menu-principal-container {
