--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,7 +1,7 @@
 /*
-theme name: lab-4 gr3 eddy martin
-Author: Eddy martin
-Author URI: https://github.com/eddytuto
+theme name: exercise 2 Edward Twingstan
+Author: Edward Twingstan
+Author URI: 
 Description: Ce thème servira de base de développement pour l'ensemble du cours 4W4. Chacune des étapes de développement se retrouvera sur gitHub à l'adresse: https://github.com/eddytuto/2022-4w4
 Version: 1.0.0
 License: GNU General Public License v2 or later
@@ -34,6 +34,7 @@ COMPOSANTES
 @import "composantes/header";
 @import "composantes/navigation";
 @import "composantes/footer";
+@import "composantes/erreur_404";
 /* ---------------------------------------------------------
 ANIMATION
 --------------------------------------------------------- */
