--- a/sass/style.scss
+++ b/sass/style.scss
@@ -35,6 +35,8 @@ COMPOSANTES
 @import "composantes/navigation";
 @import "composantes/footer";
 @import "composantes/erreur_404";
+@import "composantes/single-post";
+@import "composantes/recherche";
 /* ---------------------------------------------------------
 ANIMATION
 --------------------------------------------------------- */
