--- a/style.css
+++ b/style.css
@@ -476,16 +476,28 @@ COMPOSANTES
   background-color: #6faee2;
   color: #fa9292;
   padding-left: 10px;
+  display: flex;
+  align-items: center;
 }
 
-.site__header .header__titre {
+.header__titre {
   font-size: 3em;
   font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande", "Lucida Sans", Arial, sans-serif;
 }
 
-.site__header .header__description {
+.header__description {
   font-size: 1.5rem;
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+}
+
+.util {
+  display: flex;
+  flex-direction: column;
+}
+
+.util__menu {
+  display: flex;
+  flex-direction: row;
 }
 
 #burger {
