--- a/sass/composantes/_header.scss
+++ b/sass/composantes/_header.scss
@@ -1,14 +1,29 @@
 .site__header {
-    background-color: $color__background-header;
-    color: $color__font-header;
-    padding-left: 10px;
+  background-color: $color__background-header;
+  color: $color__font-header;
+  padding-left: 10px;
+  display: flex;
+  align-items: center;
+}
 
-    .header__titre {
-      font-size: 3em;
-      font-family: $font__titre;
-    }
-    .header__description {
-      font-size: 1.5rem;
-      font-family: $font__main;
-    }
+.header__titre {
+  font-size: 3em;
+  font-family: $font__titre;
+
+}
+
+.header__description {
+  font-size: 1.5rem;
+  font-family: $font__main;
+}
+
+.util {
+  display: flex;
+  flex-direction: column;
+
+
+  &__menu {
+    display: flex;
+    flex-direction: row;
   }
+}
