--- a/style.css
+++ b/style.css
@@ -606,6 +606,10 @@ COMPOSANTES
   font-size: 1rem;
 }
 
+.cours__titre {
+  color: red;
+}
+
 /* ---------------------------------------------------------
 ANIMATION
 --------------------------------------------------------- */
