--- a/sass/composantes/_footer.scss
+++ b/sass/composantes/_footer.scss
@@ -28,6 +28,24 @@
           }    
        }
     }
+    &__search{
+      display: flex;
+      justify-content: center;
+    }
+  }
+  .recherche{
+    background-color: rgba(246, 34, 34, 0.411);
+    &__text{
+      border: none;
+      background-color: rgba(255, 255, 255, 0);
+    }
+    &__submit{
+      border: none;
+      background-color: rgba(255, 255, 255, 0);
+      svg{
+        padding-top: 0.1rem;
+      }
+    }
   }
 
 .footer__titre,
