--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,12 +1,12 @@
 /*
 theme name: exercise 2 Edward Twingstan
 Author: Edward Twingstan
-Author URI: 
-Description: Ce thème servira de base de développement pour l'ensemble du cours 4W4. Chacune des étapes de développement se retrouvera sur gitHub à l'adresse: https://github.com/eddytuto/2022-4w4
+Author URI: https://github.com/twings07/4W4/tree/exer2
+Description: Exercise no2 réalisé dans le cours de conception d'interfaces et développement Web
 Version: 1.0.0
 License: GNU General Public License v2 or later
 License URI: LICENSE
-Text Domain: cidw-4w4
+Text Domain: cidw-4w4hsl(17, 64%hsl(17, 64%, 44%)
 
 */
 /* ---------------------------------------------------------
