--- a/style.css
+++ b/style.css
@@ -2,12 +2,12 @@
 /*
 theme name: exercise 2 Edward Twingstan
 Author: Edward Twingstan
-Author URI: 
-Description: Ce thème servira de base de développement pour l'ensemble du cours 4W4. Chacune des étapes de développement se retrouvera sur gitHub à l'adresse: https://github.com/eddytuto/2022-4w4
+Author URI: https://github.com/twings07/4W4/tree/exer2
+Description: Exercise no2 réalisé dans le cours de conception d'interfaces et développement Web
 Version: 1.0.0
 License: GNU General Public License v2 or later
 License URI: LICENSE
-Text Domain: cidw-4w4
+Text Domain: cidw-4w4hsl(17, 64%hsl(17, 64%, 44%)
 
 */
 /* ---------------------------------------------------------
@@ -371,11 +371,11 @@ a:hover, a:active {
 }
 
 .site__footer a:visited {
-  color: #1435eb;
+  color: #703c00;
 }
 
 .site__footer a:hover, .site__footer a:focus, .site__footer a:active {
-  color: #19e123;
+  color: #7e0101;
 }
 
 .site__footer a:focus {
@@ -391,11 +391,11 @@ a:hover, a:active {
 }
 
 .header__titre a:visited {
-  color: #7a49d4;
+  color: #802f00;
 }
 
 .header__titre a:hover, .header__titre a:focus, .header__titre a:active {
-  color: #8be58f;
+  color: #790f01;
 }
 
 .header__titre a:focus {
@@ -411,7 +411,7 @@ COMPOSANTES
 --------------------------------------------------------- */
 .site__main {
   padding: 10px 15px;
-  background-color: #d5e6f1;
+  background-color: #f8c9ab;
   border-radius: 5px;
   box-shadow: #39443e 1px -1px 10px;
 }
@@ -423,7 +423,7 @@ COMPOSANTES
 
 .formation__titre {
   font-size: 2rem;
-  color: #ebcac1;
+  color: #900303;
   margin: 10px 0px;
   font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande", "Lucida Sans", Arial, sans-serif;
 }
@@ -434,7 +434,7 @@ COMPOSANTES
 }
 
 .formation__cours {
-  background-color: #d1e9ff;
+  background-color: #ffebd1;
   box-shadow: #394044 1px -1px 10px;
   border-radius: 5px;
   margin: 10px;
@@ -458,7 +458,7 @@ COMPOSANTES
 
 .cours__titre {
   font-size: 1.5rem;
-  color: #ebcac1;
+  color: #900303;
   margin: 5px 0px;
 }
 
@@ -473,8 +473,8 @@ COMPOSANTES
 }
 
 .site__header {
-  background-color: #6faee2;
-  color: #fa9292;
+  background-color: #fa8a57;
+  color: red;
   padding-left: 10px;
   display: flex;
   align-items: center;
@@ -537,11 +537,11 @@ COMPOSANTES
   display: block;
   text-decoration: none;
   padding: 4px;
-  background-color: #8293e3;
+  background-color: #e3b182;
 }
 
 .menu-item a:hover {
-  background-color: #2832b8;
+  background-color: #b82828;
 }
 
 @media screen and (min-width: 800px) {
@@ -555,7 +555,7 @@ COMPOSANTES
 
 .site__footer {
   font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande", "Lucida Sans", Arial, sans-serif;
-  background-color: #07143b;
+  background-color: #3b1707;
   padding: 15px;
 }
 
@@ -580,18 +580,41 @@ COMPOSANTES
 }
 
 .site__footer__menu__ul .menu-item a:hover svg {
-  color: #19e123;
+  color: #7e0101;
+}
+
+.site__footer__search {
+  display: flex;
+  justify-content: center;
+}
+
+.recherche {
+  background-color: rgba(246, 34, 34, 0.411);
+}
+
+.recherche__text {
+  border: none;
+  background-color: rgba(255, 255, 255, 0);
+}
+
+.recherche__submit {
+  border: none;
+  background-color: rgba(255, 255, 255, 0);
+}
+
+.recherche__submit svg {
+  padding-top: 0.1rem;
 }
 
 .footer__titre,
 .footer__presentation,
 .footer__author {
-  color: #ffcabc;
+  color: #ce6300;
   text-align: center;
 }
 
 .error-404 {
-  background-color: #f15c70;
+  background-color: #900000;
 }
 
 .error-404 h1 {
@@ -666,28 +689,28 @@ LAYOUT
 theme name: Lab 2 Lemieux Florence
 */
 .site {
-  background-color: #dae0f1;
+  background-color: #fa4f00;
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
 }
 
 .site__header {
   grid-area: header;
-  background-color: #6faee2;
+  background-color: #fa8a57;
 }
 
 .site__barre {
   grid-area: sidebar;
-  background-color: #051d29;
+  background-color: #db8f39;
 }
 
 .site__main {
   grid-area: main;
-  background-color: #d5e6f1;
+  background-color: #f8c9ab;
 }
 
 .site__footer {
   grid-area: footer;
-  background-color: #07143b;
+  background-color: #3b1707;
 }
 
 .site {
