--- a/sass/composantes/_header.scss
+++ b/sass/composantes/_header.scss
@@ -3,27 +3,32 @@
   color: $color__font-header;
   padding-left: 10px;
   display: flex;
+  justify-content: space-around;
   align-items: center;
 }
 
 .header__titre {
-  font-size: 3em;
+  font-size: clamp(0.5rem, 3vw, 7rem);
   font-family: $font__titre;
 
 }
 
 .header__description {
-  font-size: 1.5rem;
+  font-size: clamp(0.8rem, 2.5vw, 5.5rem);
   font-family: $font__main;
 }
 
 .util {
   display: flex;
   flex-direction: column;
-
-
+  font-size: clamp(0.3rem, 2.5vw, 1rem);
+  
   &__menu {
     display: flex;
     flex-direction: row;
+    justify-content: space-evenly;
+  }
+  .svg{
+    font-size: clamp(0.2rem, 2.5vw, 07rem);
   }
 }
