--- a/style.css
+++ b/style.css
@@ -477,27 +477,34 @@ COMPOSANTES
   color: red;
   padding-left: 10px;
   display: flex;
+  justify-content: space-around;
   align-items: center;
 }
 
 .header__titre {
-  font-size: 3em;
+  font-size: clamp(0.5rem, 3vw, 7rem);
   font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande", "Lucida Sans", Arial, sans-serif;
 }
 
 .header__description {
-  font-size: 1.5rem;
+  font-size: clamp(0.8rem, 2.5vw, 5.5rem);
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
 }
 
 .util {
   display: flex;
   flex-direction: column;
+  font-size: clamp(0.3rem, 2.5vw, 1rem);
 }
 
 .util__menu {
   display: flex;
   flex-direction: row;
+  justify-content: space-evenly;
+}
+
+.util .svg {
+  font-size: clamp(0.2rem, 2.5vw, 7rem);
 }
 
 #burger {
