retouche sur quelques pages

--- a/sass/animation/_entete.scss
+++ b/sass/animation/_entete.scss
@@ -9,7 +9,7 @@
         width : 100px;
         height : 100px;
         border-radius: 50%;
-        background-color: rgb(17, 97, 247);
+        background-color: rgba(251, 168, 13, 0.876);
         color : #fff;
         font-size: 3rem;
        // animation : anim-entete 1s forwards;
