--- a/style.css
+++ b/style.css
@@ -504,7 +504,7 @@ COMPOSANTES
 }
 
 .util .svg {
-  font-size: clamp(0.2rem, 2.5vw, 7rem);
+  font-size: clamp(0.2rem, 2.5vw, 0.8rem);
 }
 
 #burger {
@@ -655,7 +655,7 @@ ANIMATION
   width: 100px;
   height: 100px;
   border-radius: 50%;
-  background-color: #1161f7;
+  background-color: rgba(251, 168, 13, 0.876);
   color: #fff;
   font-size: 3rem;
 }
