--- a/sass/variables/_couleurs.scss
+++ b/sass/variables/_couleurs.scss
@@ -29,3 +29,7 @@ $color__font-footer : rgb(206, 99, 0);
 
 //404
 $color_background-404 : rgb(144, 0, 0);
+
+//single post
+$color_single_p : rgb(0, 0, 0) ;
+$color_single_titre : rgb(255, 0, 0);
