--- a/style.css
+++ b/style.css
@@ -494,6 +494,7 @@ COMPOSANTES
 .util {
   display: flex;
   flex-direction: column;
+  padding: 10px;
   font-size: clamp(0.3rem, 2.5vw, 1rem);
 }
 
@@ -501,6 +502,7 @@ COMPOSANTES
   display: flex;
   flex-direction: row;
   justify-content: space-evenly;
+  padding: 10px;
 }
 
 .util .svg {
@@ -638,6 +640,31 @@ COMPOSANTES
 
 .cours__titre {
   color: red;
+}
+
+.cours section p {
+  color: black;
+}
+
+.recherche {
+  background-color: rgba(251, 0, 0, 0.411);
+  border: 2px solid black;
+  padding: 5px;
+  border-radius: 15px;
+}
+
+.recherche__text {
+  border: none;
+  background-color: rgba(255, 255, 255, 0);
+}
+
+.recherche__submit {
+  border: none;
+  background-color: rgba(255, 255, 255, 0);
+}
+
+.recherche__submit__submit svg {
+  padding-top: 0.1rem;
 }
 
 /* ---------------------------------------------------------
