--- a/sass/composantes/_recherche.scss
+++ b/sass/composantes/_recherche.scss
@@ -1,7 +1,23 @@
 .recherche {
-    &__text {}
+    background-color: rgba(251, 0, 0, 0.411);
+    border: 2px solid rgb(0, 0, 0);
+    padding: 5px;
+    border-radius: 15px;
+
+    &__text {
+        border: none;
+        background-color: rgba(255, 255, 255, 0);
+    }
 
     &__submit {
-        svg {}
+        border: none;
+        background-color: rgba(255, 255, 255, 0);
+
+        &__submit {
+
+            svg {
+                padding-top: 0.1rem;
+            }
+        }
     }
 }
