--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,5 +1,5 @@
 /*
-theme name: exercise 2 Edward Twingstan
+theme name: TP1 Edward Twingstan
 Author: Edward Twingstan
 Author URI: https://github.com/twings07/4W4/tree/exer2
 Description: Exercise no2 réalisé dans le cours de conception d'interfaces et développement Web
