--- a/style.css
+++ b/style.css
@@ -565,63 +565,91 @@ COMPOSANTES
 .site__footer {
   font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande", "Lucida Sans", Arial, sans-serif;
   background-color: #3b1707;
+  color: #ce6300;
   padding: 15px;
 }
 
-.site__footer__menu__ul {
+.site__footer__colonne {
+  display: flex;
+  justify-content: space-between;
+}
+
+.site__footer__colonne section {
+  display: flex;
+  flex-direction: column;
+  border: 3px solid red;
+  flex: 0 0 30%;
+}
+
+.site__footer__ligne {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.site__footer__ligne section {
+  padding: 10px;
+}
+
+.site__footer__ligne .site__footer__menu__nav__ul {
   display: flex;
   list-style-type: none;
   justify-content: center;
 }
 
-.site__footer__menu__ul .menu-item {
+.site__footer__ligne .site__footer__menu__nav__ul .menu-item {
   margin: 10px 5px;
 }
 
-.site__footer__menu__ul .menu-item a {
+.site__footer__ligne .site__footer__menu__nav__ul .menu-item a {
   display: flex;
   align-items: center;
   padding: 3px;
 }
 
-.site__footer__menu__ul .menu-item a svg {
+.site__footer__ligne .site__footer__menu__nav__ul .menu-item a svg {
   color: #f40b0b;
 }
 
-.site__footer__menu__ul .menu-item a:hover svg {
+.site__footer__ligne .site__footer__menu__nav__ul .menu-item a:hover svg {
   color: #7e0101;
 }
 
-.site__footer__search {
-  display: flex;
-  justify-content: center;
-}
+/*
+.site__footer {
+    font-family: $font__titre;
+    background-color: $color__background-footer;
+    padding: 15px;
 
-.recherche {
-  background-color: rgba(246, 34, 34, 0.411);
-}
-
-.recherche__text {
-  border: none;
-  background-color: rgba(255, 255, 255, 0);
-}
-
-.recherche__submit {
-  border: none;
-  background-color: rgba(255, 255, 255, 0);
-}
-
-.recherche__submit svg {
-  padding-top: 0.1rem;
-}
+    
+    &__search{
+      display: flex;
+      justify-content: center;
+    }
+  }
+  .recherche{
+    background-color: rgba(246, 34, 34, 0.411);
+    &__text{
+      border: none;
+      background-color: rgba(255, 255, 255, 0);
+    }
+    &__submit{
+      border: none;
+      background-color: rgba(255, 255, 255, 0);
+      svg{
+        padding-top: 0.1rem;
+      }
+    }
+  }
 
 .footer__titre,
 .footer__presentation,
 .footer__author {
-  color: #ce6300;
+  color: $color__font-footer;
   text-align: center;
 }
 
+*/
 .error-404 {
   background-color: #900000;
 }
