--- a/sass/composantes/_navigation.scss
+++ b/sass/composantes/_navigation.scss
@@ -39,12 +39,20 @@
 }
 
 @media screen and (min-width : $largeur__media--tablette){
-    #burger {
+    .site #burger {
         display : none;
     }
-    .menu-principal-container {
+    .site .menu-principal-container {
         display : block;
     }
+
+    .home #burger {
+        display : block;
+    }
+    .home .menu-principal-container {
+        display : none;
+    }
+    
 
 }
 
