--- a/sass/variables/_couleurs.scss
+++ b/sass/variables/_couleurs.scss
@@ -1,5 +1,6 @@
 /* ---------------- BACKGROUND */
 $color__background-body : hsl(19, 100%, 49%);
+$color__background-body-clip : hsl(19, 94%, 28%);
 $color__background-main : hsl(24, 84%, 82%);
 $color__background-cours : hsl(34, 100%, 91%);
 $color__background-header : hsl(19, 94%, 66%);
