--- a/style.css
+++ b/style.css
@@ -477,8 +477,25 @@ COMPOSANTES
   color: red;
   padding-left: 10px;
   display: flex;
+  flex-direction: column;
   justify-content: space-around;
   align-items: center;
+}
+
+@media screen and (min-width: 700px) {
+  .site__header {
+    flex-direction: row;
+  }
+}
+
+.site__header__titre {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+}
+
+.custom-logo-link, .header__titre, .util {
+  padding: 20px;
 }
 
 .header__titre {
@@ -554,11 +571,17 @@ COMPOSANTES
 }
 
 @media screen and (min-width: 800px) {
-  #burger {
+  .site #burger {
     display: none;
   }
-  .menu-principal-container {
+  .site .menu-principal-container {
     display: block;
+  }
+  .home #burger {
+    display: block;
+  }
+  .home .menu-principal-container {
+    display: none;
   }
 }
 
@@ -755,19 +778,33 @@ theme name: Lab 2 Lemieux Florence
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
 }
 
+.home ::after {
+  position: absolute;
+  content: "";
+  width: 100%;
+  height: 100%;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  clip-path: polygon(100% 0, 0% 100%, 100% 100%);
+  background-color: rgba(139, 47, 4, 0.5);
+  z-index: -1;
+}
+
 .site__header {
   grid-area: header;
-  background-color: #fa8a57;
+  background-color: rgba(250, 138, 87, 0.5);
 }
 
 .site__barre {
   grid-area: sidebar;
-  background-color: #db8f39;
+  background-color: rgba(219, 143, 57, 0.5);
 }
 
 .site__main {
   grid-area: main;
-  background-color: #f8c9ab;
+  background-color: rgba(248, 201, 171, 0.5);
 }
 
 .site__footer {
@@ -786,6 +823,12 @@ theme name: Lab 2 Lemieux Florence
   .site {
     grid-template-columns: 300px auto;
     grid-template-areas: "header header" "sidebar main" "footer footer";
+  }
+  .home {
+    display: grid;
+    gap: 0px;
+    grid-template-columns: auto;
+    grid-template-areas: "sidebar" "header" "main" "footer";
   }
 }
 /*# sourceMappingURL=style.css.map */
