--- a/sass/layout/_layout.scss
+++ b/sass/layout/_layout.scss
@@ -8,21 +8,33 @@ theme name: Lab 2 Lemieux Florence
     font-family: $font__main;
 }
 
-
+.home ::after{
+    position:absolute;
+    content: "";
+    width: 100%;
+    height: 100%;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    clip-path: polygon(100% 0, 0% 100%, 100% 100%);
+    background-color: rgba($color__background-body-clip, .5);
+    z-index: -1;
+}
 
 .site__header{
     grid-area: header;  
-    background-color: $color__background-header;
+    background-color: rgba($color__background-header,.5);
 }
 
 .site__barre{
     grid-area: sidebar;
-    background-color: $color__background-barre;
+    background-color: rgba($color__background-barre, .5);
 }
 
 .site__main{
     grid-area: main;
-    background-color: $color__background-main;
+    background-color: rgba($color__background-main, .5);
 }
 
 .site__footer{
@@ -50,6 +62,17 @@ theme name: Lab 2 Lemieux Florence
             "sidebar main"
             "footer footer";
     }
+    .home {
+        display: grid;
+        gap : 0px;
+        grid-template-columns: auto;
+        grid-template-areas:
+            "sidebar"
+            "header"
+            "main"
+            "footer";
+    }
+    
 }
 
 
