--- a/style.css
+++ b/style.css
@@ -778,17 +778,18 @@ theme name: Lab 2 Lemieux Florence
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
 }
 
-.home ::after {
-  position: absolute;
+/* Permet */
+.home::after {
   content: "";
+  position: absolute;
   width: 100%;
   height: 100%;
   top: 0;
   bottom: 0;
   left: 0;
   right: 0;
-  clip-path: polygon(100% 0, 0% 100%, 100% 100%);
-  background-color: rgba(139, 47, 4, 0.5);
+  background-color: rgba(139, 47, 4, 0.8);
+  clip-path: polygon(0 0, 100% 0, 100% 100%, 0 99%, 53% 54%);
   z-index: -1;
 }
 
@@ -824,9 +825,10 @@ theme name: Lab 2 Lemieux Florence
     grid-template-columns: 300px auto;
     grid-template-areas: "header header" "sidebar main" "footer footer";
   }
+  /* Permet de retirer la barre de menu principal dans la page d'accueil */
   .home {
     display: grid;
-    gap: 0px;
+    gap: 10px;
     grid-template-columns: auto;
     grid-template-areas: "sidebar" "header" "main" "footer";
   }
