--- a/sass/variables/_couleurs.scss
+++ b/sass/variables/_couleurs.scss
@@ -34,3 +34,7 @@ $color_background-404 : rgb(144, 0, 0);
 //single post
 $color_single_p : rgb(0, 0, 0) ;
 $color_single_titre : rgb(255, 0, 0);
+
+//couleur pour animation titre
+$color_animation_stroke_header: rgb(139, 45, 1);
+$color_animation_header: rgb(255, 0, 0);
