--- a/sass/composantes/_recherche.scss
+++ b/sass/composantes/_recherche.scss
@@ -1,4 +1,7 @@
 .recherche {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
     background-color: rgba(251, 0, 0, 0.411);
     border: 2px solid rgb(0, 0, 0);
     padding: 5px;
@@ -12,12 +15,5 @@
     &__submit {
         border: none;
         background-color: rgba(255, 255, 255, 0);
-
-        &__submit {
-
-            svg {
-                padding-top: 0.1rem;
-            }
-        }
     }
 }
