--- a/sass/layout/_layout.scss
+++ b/sass/layout/_layout.scss
@@ -7,7 +7,7 @@ theme name: Lab 2 Lemieux Florence
     background-color: $color__background-body;
     font-family: $font__main;
 }
-/* Permet */
+/* Permet de modifier la page d'accueil */
 .home::after{
     content: "";
     position: absolute;
