--- a/style.css
+++ b/style.css
@@ -517,7 +517,7 @@ COMPOSANTES
 
 .util__menu {
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   justify-content: space-evenly;
   padding: 10px;
 }
@@ -698,6 +698,9 @@ COMPOSANTES
 }
 
 .recherche {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
   background-color: rgba(251, 0, 0, 0.411);
   border: 2px solid black;
   padding: 5px;
@@ -712,10 +715,6 @@ COMPOSANTES
 .recherche__submit {
   border: none;
   background-color: rgba(255, 255, 255, 0);
-}
-
-.recherche__submit__submit svg {
-  padding-top: 0.1rem;
 }
 
 /* ---------------------------------------------------------
@@ -778,7 +777,7 @@ theme name: Lab 2 Lemieux Florence
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
 }
 
-/* Permet */
+/* Permet de modifier la page d'accueil */
 .home::after {
   content: "";
   position: absolute;
