--- a/style.css
+++ b/style.css
@@ -2,8 +2,8 @@
 /*
 theme name: TP1 Edward Twingstan
 Author: Edward Twingstan
-Author URI: https://github.com/twings07/4W4/tree/exer2
-Description: Exercise no2 réalisé dans le cours de conception d'interfaces et développement Web
+Author URI: https://github.com/twings07/4W4/tree/tp1
+Description: TP1 réalisé dans le cours de conception d'interfaces et développement Web
 Version: 1.0.0
 License: GNU General Public License v2 or later
 License URI: LICENSE
