--- a/style.css
+++ b/style.css
@@ -1,9 +1,9 @@
 @charset "UTF-8";
 /*
-theme name: TP1 Edward Twingstan
+theme name: Lab5 Edward Twingstan
 Author: Edward Twingstan
-Author URI: https://github.com/twings07/4W4/tree/tp1
-Description: TP1 réalisé dans le cours de conception d'interfaces et développement Web
+Author URI: 
+Description: Lab 5 réalisé dans le cours de conception d'interfaces et développement Web
 Version: 1.0.0
 License: GNU General Public License v2 or later
 License URI: LICENSE
@@ -433,7 +433,33 @@ COMPOSANTES
   flex-wrap: wrap;
 }
 
+.formation__liste .web {
+  background-image: url("https://s2.svgbox.net/octicons.svg?ic=globe-bold");
+}
+
+.formation__liste .jeu {
+  background-image: url("https://s2.svgbox.net/materialui.svg?ic=games");
+}
+
+.formation__liste .design {
+  background-image: url("https://s2.svgbox.net/materialui.svg?ic=color_lens");
+}
+
+.formation__liste .utilitaire {
+  background-image: url("https://s2.svgbox.net/octicons.svg?ic=tools-bold");
+}
+
+.formation__liste .video {
+  background-image: url("https://s2.svgbox.net/octicons.svg?ic=device-camera-video");
+}
+
+.formation__liste .creation-3d {
+  background-image: url("https://s2.svgbox.net/materialui.svg?ic=view_in_ar");
+}
+
 .formation__cours {
+  background-repeat: no-repeat;
+  background-position: 97% 3%;
   background-color: #ffebd1;
   box-shadow: #394044 1px -1px 10px;
   border-radius: 5px;
@@ -583,6 +609,21 @@ COMPOSANTES
   .home .menu-principal-container {
     display: none;
   }
+}
+
+/**********************************************************
+Navigation pour la page catégorie.php   bonton de catégorie
+***********************************************************/
+.menu-categorie_cours-container .menu {
+  display: flex;
+}
+
+.menu-categorie_cours-container .menu .menu-item {
+  margin: 0 15px;
+}
+
+.menu-categorie_cours-container .menu .menu-item a {
+  text-decoration: none;
 }
 
 .site__footer {
