s9-c2,Edward Twingstan, fichier _balise.scss - menu_accueil et description des choix menu

--- a/sass/composantes/_navigation_accueil.scss
+++ b/sass/composantes/_navigation_accueil.scss
@@ -1,13 +1,26 @@
-.menu-accueil-container{ //nav
-    .menu{  //ul
+.menu-accueil-container {
+    // nav
 
-        .menu-item{ //li
-            a{ //a
-                .menu-item-description{ //span
+    .menu {
+        //ul
+        display : flex;
+
+        .menu-item {
+            //li
+            display : flex;
+            flex-direction: column;
+            width : 20%;
+            margin: 0 15px;
+
+            a {
+                text-decoration: none;
+                //a
+                .menu-item-description {
+                    // span
 
                 }
             }
-            
         }
+
     }
-}
+} 
